# cs559-project1

./: .gitignore  CMakeLists.txt  painterly.sublime-workspace  untitled.sublime-workspace
blur/: CMakeLists.txt
blur/src/: main.cpp
painterly/: CMakeLists.txt
painterly/include/: ImagePainting.h
painterly/src/: ImagePainting.cpp  main.cpp
resize/: CMakeLists.txt
resize/src/: main.cpp
shared/: CMakeLists.txt
shared/include/: ImageProcessing.h  Point.h
shared/src/: ImageProcessing.cpp
